# Gradience

./: .gitignore  Cargo.toml  CommandLineHelp.md  README.md  gruvbox.json
.github/workflows/: rust-clippy.yml  rust.yml
gradience-cli/: Cargo.toml
gradience-cli/src/: main.rs
gradience-lib/: Cargo.toml
gradience-lib/src/: lib.rs  preset.rs  shell.rs  store.rs  utils.rs
shell/46/: gnome-shell.template
shell/46/gnome-shell-sass/: _colors.scss  _colors.template  _common.template  _default-colors.template  _drawing.template  _high-contrast-colors.template
shell/46/gnome-shell-sass/widgets/: _a11y.template  _check-box.template  _dialogs.template  _ibus-popup.template  _keyboard.template  _login-lock.template  _looking-glass.template  _message-list.template  _misc.template  _osd.template  _panel.template  _quick-settings.template  _screenshot.template  _slider.template  _switcher-popup.template  _switches.template  _workspace-thumbnails.template
