[package]
name = "gradience-cli"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
gradience-lib = { path = "../gradience-lib", features = ["online"]}
shellexpand = "3.1.0"
clap-markdown = "0.1.4"
include_dir = "0.7.4"