[package]
name = "gradience-lib"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
handlebars = "5.0.0"
grass = "0.13.3"
reqwest = { version="0.12.5", features = ["blocking", "json"], optional = true}

[features]
online = ["dep:reqwest"]